shopping/src/main/java/org/example/shopping/_core/errors/exception/Exception401.java
package org.example.shopping._core.errors.exception;

/**
 * 401 Unauthorized 인증 처리 오류
 */
public class Exception401 extends RuntimeException {
    public Exception401(String msg) {
        super(msg);
    }


}
